--- a/css/login.css
+++ b/css/login.css
@@ -1,4 +1,3 @@
-
 .container{background:#fff; border-radius: 10px; box-shadow:15px 20px 0px rgba(0,0,0,0.1);}
 .login-sec{padding: 50px 30px; position:relative;}
 .login-sec .copy-text{position:absolute; width:80%; bottom:20px; font-size:13px; text-align:center;}
@@ -10,3 +9,32 @@
 .carousel-inner{border-radius: 10px 0 0 10px ;}
 .carousel-caption{text-align:left; left:5%;}
 .banner-sec{background:rgb(125, 126, 143)  no-repeat left bottom; background-size:cover; min-height:200px; border-radius: 10px 0 0 10px; padding:0;}
+
+.fa {
+    padding: 20px;
+    font-size: 30px;
+    width: 50px;
+    text-align: center;
+    text-decoration: none;
+    margin: 5px 2px;
+  }
+  
+  .fa:hover {
+      opacity: 0.7;
+  }
+  
+  .fa-facebook {
+    background: #3B5998;
+    color: white;
+  }
+  
+  .fa-twitter {
+    background: #55ACEE;
+    color: white;
+  }
+  
+  .fa-google {
+    background: #dd4b39;
+    color: white;
+  }
+  
