--- a/src/assets/scss/now-ui-kit/_tabs.scss
+++ b/src/assets/scss/now-ui-kit/_tabs.scss
@@ -12,7 +12,8 @@
         border-top-right-radius: $border-radius-small;
         border-top-left-radius: $border-radius-small;
     }
-
+    
+   
     > .nav-item{
         > .nav-link{
             color: $default-color;
@@ -33,6 +34,18 @@
                 background-color: $light-black;
                 border-radius: 30px;
                 color: $white-color;
+            }
+            
+            i.arrow {
+                border: solid white;
+                border-width: 0 3px 3px 0;
+                display: inline-block;
+                padding: 3px;
+            }
+
+            i.right {
+                transform: rotate(-45deg);
+                -webkit-transform: rotate(-45deg);
             }
 
             i.now-ui-icons{
